# n_Body_Simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md  nbody_simulation
.github/workflows/: build.yml
src/: Algorithm.cpp  Algorithm.h  Body.cpp  Body.h  Physics.cpp  Physics.h  Simulation.cpp  Simulation.h  constants.h  main.cpp  vector.h
src/3dStuff/: Makefile  test.cpp
src/gpu/: Physics_kernel.cu
